# fedcal

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.MD  _tree.py  _typing.py  civpay.py  constants.py  date_attributes.py  dept_status.py  dict.txt  pyproject.toml
.github/workflows/: pylint.yml  python-package.yml
dev_scripts/: gen_json.py  gen_json_modified.py  mod_gen_json.py  new_gen_json.py  status_intervals.json
dev_scripts/tests/: test_gen_json.py
docs/source/: conf.py  index.rst
fedcal/: __init__.py  _base.py  _civpay.py  _cls_utils.py  _date_attributes.py  _dept_status.py  _interval_factory.py  _interval_store.py  _load.py  _meta.py  _mil.py  _status_factory.py  _status_store.py  _tree.py  _typing.py  cal_offsets.py  constants.py  core.py  depts.py  enum.py  fedcal.py  feddateindex.py  feddatestamp.py  fedindex.py  fedstamp.py  fiscal.py  mil.py  offsets.py  status.py  status_intervals.json  time_utils.py  utils.py
fedcal/tmp_offline/: _cls_utils.py  fedindex.py  fedstamp.py  status.py
src/: __init__.py  _typing.py  civpay.py  constants.py  date_attributes.py  depts.py  fedcal.py  mil.py  time_utils.py
